# serializer version: 1
# name: test_au_vehicle_snapshot[au_hyundai_ioniq_5_2023_with_soc.json]
  dict({
    'VIN': None,
    'accessory_on': None,
    'air_control_is_on': False,
    'air_temperature': 22.0,
    'back_left_door_is_locked': None,
    'back_left_door_is_open': 0,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': None,
    'back_right_door_is_open': 0,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': 0,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 78,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': None,
    'dtc_descriptions': None,
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': None,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': False,
    'ev_battery_is_plugged_in': 0,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 64,
    'ev_battery_precondition_enabled': None,
    'ev_battery_remain': None,
    'ev_battery_soh_percentage': None,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': 90,
    'ev_charge_limits_dc': 80,
    'ev_charge_port_door_is_open': False,
    'ev_charging_current': None,
    'ev_charging_power': None,
    'ev_driving_range': 260.0,
    'ev_driving_range_unit': 'km',
    'ev_estimated_current_charge_duration': 0,
    'ev_estimated_fast_charge_duration': 0,
    'ev_estimated_portable_charge_duration': 0,
    'ev_estimated_station_charge_duration': 0,
    'ev_first_departure_climate_defrost': None,
    'ev_first_departure_climate_enabled': None,
    'ev_first_departure_climate_temperature': None,
    'ev_first_departure_climate_temperature_unit': None,
    'ev_first_departure_days': list([
      9,
    ]),
    'ev_first_departure_enabled': False,
    'ev_first_departure_time': '08:00:00',
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': '06:00:00',
    'ev_off_peak_start_time': '22:00:00',
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': None,
    'ev_second_departure_climate_defrost': None,
    'ev_second_departure_climate_enabled': None,
    'ev_second_departure_climate_temperature': None,
    'ev_second_departure_climate_temperature_unit': None,
    'ev_second_departure_days': list([
      9,
    ]),
    'ev_second_departure_enabled': False,
    'ev_second_departure_time': '08:00:00',
    'ev_target_range_charge_AC': 367,
    'ev_target_range_charge_AC_unit': 'km',
    'ev_target_range_charge_DC': 326,
    'ev_target_range_charge_DC_unit': 'km',
    'ev_v2l_discharge_limit': None,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': None,
    'front_left_door_is_open': 0,
    'front_left_seat_status': 'Off',
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': None,
    'front_right_door_is_open': 0,
    'front_right_seat_status': 'Off',
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': None,
    'headlamp_right_low': None,
    'headlamp_status': None,
    'hood_is_open': False,
    'id': None,
    'ign3': None,
    'is_locked': True,
    'key': None,
    'last_service_distance': None,
    'last_updated_at': '2024-07-14T22:00:00+00:00',
    'location': list([
      151.2093,
      -33.8688,
    ]),
    'location_last_updated_at': '2024-07-14T22:00:00+00:00',
    'location_latitude': -33.8688,
    'location_longitude': 151.2093,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': None,
    'odometer': 22450.0,
    'odometer_unit': 'km',
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': 'Off',
    'rear_right_seat_status': 'Off',
    'registration_date': None,
    'remote_ignition': None,
    'side_mirror_heater_is_on': 0,
    'sleep_mode_check': None,
    'smart_key_battery_warning_is_on': False,
    'steering_wheel_heater_is_on': False,
    'stop_lamp_left': None,
    'stop_lamp_right': None,
    'sunroof_is_open': None,
    'timezone': 'UTC',
    'tire_pressure_all_warning_is_on': False,
    'tire_pressure_front_left_warning_is_on': False,
    'tire_pressure_front_right_warning_is_on': False,
    'tire_pressure_rear_left_warning_is_on': False,
    'tire_pressure_rear_right_warning_is_on': False,
    'total_driving_range': 260.0,
    'total_driving_range_unit': 'km',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': None,
    'trunk_is_open': False,
    'turn_signal_left_front': None,
    'turn_signal_left_rear': None,
    'turn_signal_right_front': None,
    'turn_signal_right_rear': None,
    'washer_fluid_warning_is_on': False,
    'year': None,
  })
# ---
# name: test_bluelink_usa_vehicle_snapshot[us_hyundai_ioniq_5_2024_cached.json]
  dict({
    'VIN': None,
    'accessory_on': None,
    'air_control_is_on': False,
    'air_temperature': '72',
    'back_left_door_is_locked': None,
    'back_left_door_is_open': 0,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': None,
    'back_right_door_is_open': 0,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': 0,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 92,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': None,
    'dtc_descriptions': None,
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': None,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': False,
    'ev_battery_is_plugged_in': 0,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 85,
    'ev_battery_precondition_enabled': None,
    'ev_battery_remain': None,
    'ev_battery_soh_percentage': None,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': 100,
    'ev_charge_limits_dc': 80,
    'ev_charge_port_door_is_open': None,
    'ev_charging_current': None,
    'ev_charging_power': 0.0,
    'ev_driving_range': 240,
    'ev_driving_range_unit': 'mi',
    'ev_estimated_current_charge_duration': 0,
    'ev_estimated_fast_charge_duration': 0,
    'ev_estimated_portable_charge_duration': 0,
    'ev_estimated_station_charge_duration': 0,
    'ev_first_departure_climate_defrost': None,
    'ev_first_departure_climate_enabled': None,
    'ev_first_departure_climate_temperature': None,
    'ev_first_departure_climate_temperature_unit': None,
    'ev_first_departure_days': None,
    'ev_first_departure_enabled': None,
    'ev_first_departure_time': None,
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': None,
    'ev_off_peak_start_time': None,
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': None,
    'ev_second_departure_climate_defrost': None,
    'ev_second_departure_climate_enabled': None,
    'ev_second_departure_climate_temperature': None,
    'ev_second_departure_climate_temperature_unit': None,
    'ev_second_departure_days': None,
    'ev_second_departure_enabled': None,
    'ev_second_departure_time': None,
    'ev_target_range_charge_AC': None,
    'ev_target_range_charge_AC_unit': None,
    'ev_target_range_charge_DC': None,
    'ev_target_range_charge_DC_unit': None,
    'ev_v2l_discharge_limit': None,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': None,
    'front_left_door_is_open': 0,
    'front_left_seat_status': 'Off',
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': None,
    'front_right_door_is_open': 0,
    'front_right_seat_status': 'Off',
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': None,
    'headlamp_right_low': None,
    'headlamp_status': None,
    'hood_is_open': False,
    'id': None,
    'ign3': None,
    'is_locked': True,
    'key': None,
    'last_service_distance': None,
    'last_updated_at': '2024-09-01T12:00:00+00:00',
    'location': list([
      -118.2437,
      34.0522,
    ]),
    'location_last_updated_at': '2024-09-01T12:00:00+00:00',
    'location_latitude': 34.0522,
    'location_longitude': -118.2437,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': None,
    'odometer': 12500.0,
    'odometer_unit': 'mi',
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': 'Off',
    'rear_right_seat_status': 'Off',
    'registration_date': None,
    'remote_ignition': None,
    'side_mirror_heater_is_on': 0,
    'sleep_mode_check': None,
    'smart_key_battery_warning_is_on': False,
    'steering_wheel_heater_is_on': 0,
    'stop_lamp_left': None,
    'stop_lamp_right': None,
    'sunroof_is_open': None,
    'timezone': 'UTC',
    'tire_pressure_all_warning_is_on': False,
    'tire_pressure_front_left_warning_is_on': False,
    'tire_pressure_front_right_warning_is_on': False,
    'tire_pressure_rear_left_warning_is_on': False,
    'tire_pressure_rear_right_warning_is_on': False,
    'total_driving_range': 240,
    'total_driving_range_unit': 'mi',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': None,
    'trunk_is_open': False,
    'turn_signal_left_front': None,
    'turn_signal_left_rear': None,
    'turn_signal_right_front': None,
    'turn_signal_right_rear': None,
    'washer_fluid_warning_is_on': False,
    'year': None,
  })
# ---
# name: test_ca_vehicle_snapshot[ca_kia_niro_ev_2022_cached.json]
  dict({
    'VIN': None,
    'accessory_on': False,
    'air_control_is_on': False,
    'air_temperature': 22.0,
    'back_left_door_is_locked': None,
    'back_left_door_is_open': 0,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': None,
    'back_right_door_is_open': 0,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': 0,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 91,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': None,
    'dtc_descriptions': None,
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': None,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': True,
    'ev_battery_is_plugged_in': 1,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 82,
    'ev_battery_precondition_enabled': False,
    'ev_battery_remain': None,
    'ev_battery_soh_percentage': None,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': None,
    'ev_charge_limits_dc': None,
    'ev_charge_port_door_is_open': None,
    'ev_charging_current': None,
    'ev_charging_power': None,
    'ev_driving_range': 290,
    'ev_driving_range_unit': 'km',
    'ev_estimated_current_charge_duration': 180,
    'ev_estimated_fast_charge_duration': 35,
    'ev_estimated_portable_charge_duration': 420,
    'ev_estimated_station_charge_duration': 90,
    'ev_first_departure_climate_defrost': None,
    'ev_first_departure_climate_enabled': None,
    'ev_first_departure_climate_temperature': None,
    'ev_first_departure_climate_temperature_unit': None,
    'ev_first_departure_days': None,
    'ev_first_departure_enabled': None,
    'ev_first_departure_time': None,
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': None,
    'ev_off_peak_start_time': None,
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': None,
    'ev_second_departure_climate_defrost': None,
    'ev_second_departure_climate_enabled': None,
    'ev_second_departure_climate_temperature': None,
    'ev_second_departure_climate_temperature_unit': None,
    'ev_second_departure_days': None,
    'ev_second_departure_enabled': None,
    'ev_second_departure_time': None,
    'ev_target_range_charge_AC': None,
    'ev_target_range_charge_AC_unit': None,
    'ev_target_range_charge_DC': None,
    'ev_target_range_charge_DC_unit': None,
    'ev_v2l_discharge_limit': None,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': None,
    'front_left_door_is_open': 0,
    'front_left_seat_status': 'Off',
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': None,
    'front_right_door_is_open': 0,
    'front_right_seat_status': 'Off',
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': 0,
    'headlamp_right_low': 0,
    'headlamp_status': 0,
    'hood_is_open': False,
    'id': None,
    'ign3': False,
    'is_locked': True,
    'key': None,
    'last_service_distance': None,
    'last_updated_at': '2024-08-01T09:30:00+00:00',
    'location': list([
      None,
      None,
    ]),
    'location_last_updated_at': None,
    'location_latitude': None,
    'location_longitude': None,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': None,
    'odometer': None,
    'odometer_unit': None,
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': 'Off',
    'rear_right_seat_status': 'Off',
    'registration_date': None,
    'remote_ignition': False,
    'side_mirror_heater_is_on': 0,
    'sleep_mode_check': False,
    'smart_key_battery_warning_is_on': None,
    'steering_wheel_heater_is_on': 0,
    'stop_lamp_left': 0,
    'stop_lamp_right': 0,
    'sunroof_is_open': 0,
    'timezone': 'UTC',
    'tire_pressure_all_warning_is_on': False,
    'tire_pressure_front_left_warning_is_on': False,
    'tire_pressure_front_right_warning_is_on': False,
    'tire_pressure_rear_left_warning_is_on': False,
    'tire_pressure_rear_right_warning_is_on': False,
    'total_driving_range': 290,
    'total_driving_range_unit': 'km',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': 0,
    'trunk_is_open': False,
    'turn_signal_left_front': 0,
    'turn_signal_left_rear': 0,
    'turn_signal_right_front': 0,
    'turn_signal_right_rear': 0,
    'washer_fluid_warning_is_on': False,
    'year': 2022,
  })
# ---
# name: test_ccs2_vehicle_snapshot[eu_kia_ev9_2024_ccs2.json]
  dict({
    'VIN': None,
    'accessory_on': None,
    'air_control_is_on': 0,
    'air_temperature': 22.0,
    'back_left_door_is_locked': True,
    'back_left_door_is_open': False,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': True,
    'back_right_door_is_open': False,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': False,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 88,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': None,
    'dtc_descriptions': None,
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': 76.0,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': False,
    'ev_battery_is_plugged_in': False,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 71,
    'ev_battery_precondition_enabled': None,
    'ev_battery_remain': 54.5,
    'ev_battery_soh_percentage': 98,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': 100,
    'ev_charge_limits_dc': 80,
    'ev_charge_port_door_is_open': False,
    'ev_charging_current': 0,
    'ev_charging_power': 0.0,
    'ev_driving_range': None,
    'ev_driving_range_unit': None,
    'ev_estimated_current_charge_duration': 0,
    'ev_estimated_fast_charge_duration': 0,
    'ev_estimated_portable_charge_duration': 0,
    'ev_estimated_station_charge_duration': 0,
    'ev_first_departure_climate_defrost': None,
    'ev_first_departure_climate_enabled': None,
    'ev_first_departure_climate_temperature': None,
    'ev_first_departure_climate_temperature_unit': None,
    'ev_first_departure_days': None,
    'ev_first_departure_enabled': False,
    'ev_first_departure_time': None,
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': None,
    'ev_off_peak_start_time': None,
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': None,
    'ev_second_departure_climate_defrost': None,
    'ev_second_departure_climate_enabled': None,
    'ev_second_departure_climate_temperature': None,
    'ev_second_departure_climate_temperature_unit': None,
    'ev_second_departure_days': None,
    'ev_second_departure_enabled': False,
    'ev_second_departure_time': None,
    'ev_target_range_charge_AC': 408,
    'ev_target_range_charge_AC_unit': 'km',
    'ev_target_range_charge_DC': 326,
    'ev_target_range_charge_DC_unit': 'km',
    'ev_v2l_discharge_limit': 20,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': True,
    'front_left_door_is_open': False,
    'front_left_seat_status': 'Off',
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': True,
    'front_right_door_is_open': False,
    'front_right_seat_status': 'Off',
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': None,
    'headlamp_right_low': None,
    'headlamp_status': None,
    'hood_is_open': False,
    'id': None,
    'ign3': None,
    'is_locked': True,
    'key': None,
    'last_service_distance': None,
    'last_updated_at': '2024-09-15T13:00:00+00:00',
    'location': list([
      2.3522,
      48.8566,
    ]),
    'location_last_updated_at': '2024-09-15T14:00:00+00:00',
    'location_latitude': 48.8566,
    'location_longitude': 2.3522,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': None,
    'odometer': 5200.0,
    'odometer_unit': 'km',
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': 'Off',
    'rear_right_seat_status': 'Off',
    'registration_date': None,
    'remote_ignition': None,
    'side_mirror_heater_is_on': None,
    'sleep_mode_check': None,
    'smart_key_battery_warning_is_on': False,
    'steering_wheel_heater_is_on': False,
    'stop_lamp_left': None,
    'stop_lamp_right': None,
    'sunroof_is_open': False,
    'timezone': 'UTC+01:00',
    'tire_pressure_all_warning_is_on': False,
    'tire_pressure_front_left_warning_is_on': False,
    'tire_pressure_front_right_warning_is_on': False,
    'tire_pressure_rear_left_warning_is_on': False,
    'tire_pressure_rear_right_warning_is_on': False,
    'total_driving_range': 290.0,
    'total_driving_range_unit': 'km',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': None,
    'trunk_is_open': False,
    'turn_signal_left_front': None,
    'turn_signal_left_rear': None,
    'turn_signal_right_front': None,
    'turn_signal_right_rear': None,
    'washer_fluid_warning_is_on': False,
    'year': None,
  })
# ---
# name: test_cn_vehicle_snapshot[cn_kia_ev6_2024_with_soc.json]
  dict({
    'VIN': None,
    'accessory_on': None,
    'air_control_is_on': False,
    'air_temperature': 23.0,
    'back_left_door_is_locked': None,
    'back_left_door_is_open': 0,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': None,
    'back_right_door_is_open': 0,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': 0,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 82,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': None,
    'dtc_descriptions': None,
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': None,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': True,
    'ev_battery_is_plugged_in': 1,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 55,
    'ev_battery_precondition_enabled': None,
    'ev_battery_remain': None,
    'ev_battery_soh_percentage': None,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': 100,
    'ev_charge_limits_dc': 90,
    'ev_charge_port_door_is_open': True,
    'ev_charging_current': None,
    'ev_charging_power': None,
    'ev_driving_range': 225.0,
    'ev_driving_range_unit': 'km',
    'ev_estimated_current_charge_duration': 240,
    'ev_estimated_fast_charge_duration': 48,
    'ev_estimated_portable_charge_duration': 540,
    'ev_estimated_station_charge_duration': 120,
    'ev_first_departure_climate_defrost': None,
    'ev_first_departure_climate_enabled': None,
    'ev_first_departure_climate_temperature': None,
    'ev_first_departure_climate_temperature_unit': None,
    'ev_first_departure_days': list([
      9,
    ]),
    'ev_first_departure_enabled': False,
    'ev_first_departure_time': '08:00:00',
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': '06:00:00',
    'ev_off_peak_start_time': '22:00:00',
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': None,
    'ev_second_departure_climate_defrost': None,
    'ev_second_departure_climate_enabled': None,
    'ev_second_departure_climate_temperature': None,
    'ev_second_departure_climate_temperature_unit': None,
    'ev_second_departure_days': list([
      9,
    ]),
    'ev_second_departure_enabled': False,
    'ev_second_departure_time': '08:00:00',
    'ev_target_range_charge_AC': 408,
    'ev_target_range_charge_AC_unit': 'km',
    'ev_target_range_charge_DC': 367,
    'ev_target_range_charge_DC_unit': 'km',
    'ev_v2l_discharge_limit': None,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': None,
    'front_left_door_is_open': 0,
    'front_left_seat_status': 'Off',
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': None,
    'front_right_door_is_open': 0,
    'front_right_seat_status': 'Off',
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': None,
    'headlamp_right_low': None,
    'headlamp_status': None,
    'hood_is_open': False,
    'id': None,
    'ign3': None,
    'is_locked': True,
    'key': None,
    'last_service_distance': None,
    'last_updated_at': '2024-08-10T06:00:00+00:00',
    'location': list([
      121.4737,
      31.2304,
    ]),
    'location_last_updated_at': '2024-08-10T06:00:00+00:00',
    'location_latitude': 31.2304,
    'location_longitude': 121.4737,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': None,
    'odometer': 8500.0,
    'odometer_unit': 'km',
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': 'Off',
    'rear_right_seat_status': 'Off',
    'registration_date': None,
    'remote_ignition': None,
    'side_mirror_heater_is_on': 0,
    'sleep_mode_check': None,
    'smart_key_battery_warning_is_on': False,
    'steering_wheel_heater_is_on': False,
    'stop_lamp_left': None,
    'stop_lamp_right': None,
    'sunroof_is_open': None,
    'timezone': 'UTC',
    'tire_pressure_all_warning_is_on': False,
    'tire_pressure_front_left_warning_is_on': False,
    'tire_pressure_front_right_warning_is_on': False,
    'tire_pressure_rear_left_warning_is_on': False,
    'tire_pressure_rear_right_warning_is_on': False,
    'total_driving_range': 225.0,
    'total_driving_range_unit': 'km',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': None,
    'trunk_is_open': False,
    'turn_signal_left_front': None,
    'turn_signal_left_rear': None,
    'turn_signal_right_front': None,
    'turn_signal_right_rear': None,
    'washer_fluid_warning_is_on': False,
    'year': None,
  })
# ---
# name: test_eu_vehicle_snapshot[eu_kia_ev6_2023_with_soc.json]
  dict({
    'VIN': None,
    'accessory_on': None,
    'air_control_is_on': False,
    'air_temperature': 22.0,
    'back_left_door_is_locked': None,
    'back_left_door_is_open': 0,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': None,
    'back_right_door_is_open': 0,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': 0,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 85,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': None,
    'dtc_descriptions': None,
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': None,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': False,
    'ev_battery_is_plugged_in': 0,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 76,
    'ev_battery_precondition_enabled': None,
    'ev_battery_remain': None,
    'ev_battery_soh_percentage': None,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': 100,
    'ev_charge_limits_dc': 80,
    'ev_charge_port_door_is_open': False,
    'ev_charging_current': None,
    'ev_charging_power': 0.0,
    'ev_driving_range': 310.0,
    'ev_driving_range_unit': 'km',
    'ev_estimated_current_charge_duration': 0,
    'ev_estimated_fast_charge_duration': 0,
    'ev_estimated_portable_charge_duration': 0,
    'ev_estimated_station_charge_duration': 0,
    'ev_first_departure_climate_defrost': False,
    'ev_first_departure_climate_enabled': False,
    'ev_first_departure_climate_temperature': 24.0,
    'ev_first_departure_climate_temperature_unit': '°C',
    'ev_first_departure_days': list([
      9,
    ]),
    'ev_first_departure_enabled': False,
    'ev_first_departure_time': '08:00:00',
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': '06:00:00',
    'ev_off_peak_start_time': '22:00:00',
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': False,
    'ev_second_departure_climate_defrost': False,
    'ev_second_departure_climate_enabled': False,
    'ev_second_departure_climate_temperature': 24.0,
    'ev_second_departure_climate_temperature_unit': '°C',
    'ev_second_departure_days': list([
      9,
    ]),
    'ev_second_departure_enabled': False,
    'ev_second_departure_time': '08:00:00',
    'ev_target_range_charge_AC': 408,
    'ev_target_range_charge_AC_unit': 'km',
    'ev_target_range_charge_DC': 326,
    'ev_target_range_charge_DC_unit': 'km',
    'ev_v2l_discharge_limit': None,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': None,
    'front_left_door_is_open': 0,
    'front_left_seat_status': 'Off',
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': None,
    'front_right_door_is_open': 0,
    'front_right_seat_status': 'Off',
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': 0,
    'headlamp_right_low': 0,
    'headlamp_status': 0,
    'hood_is_open': False,
    'id': None,
    'ign3': None,
    'is_locked': True,
    'key': None,
    'last_service_distance': None,
    'last_updated_at': '2024-07-20T10:00:00+00:00',
    'location': list([
      13.405,
      52.52,
    ]),
    'location_last_updated_at': '2024-07-20T10:00:00+00:00',
    'location_latitude': 52.52,
    'location_longitude': 13.405,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': None,
    'odometer': 15234.0,
    'odometer_unit': 'km',
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': 'Off',
    'rear_right_seat_status': 'Off',
    'registration_date': None,
    'remote_ignition': None,
    'side_mirror_heater_is_on': 0,
    'sleep_mode_check': None,
    'smart_key_battery_warning_is_on': False,
    'steering_wheel_heater_is_on': False,
    'stop_lamp_left': 0,
    'stop_lamp_right': 0,
    'sunroof_is_open': None,
    'timezone': 'UTC',
    'tire_pressure_all_warning_is_on': False,
    'tire_pressure_front_left_warning_is_on': False,
    'tire_pressure_front_right_warning_is_on': False,
    'tire_pressure_rear_left_warning_is_on': False,
    'tire_pressure_rear_right_warning_is_on': False,
    'total_driving_range': 310.0,
    'total_driving_range_unit': 'km',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': None,
    'trunk_is_open': False,
    'turn_signal_left_front': 0,
    'turn_signal_left_rear': 0,
    'turn_signal_right_front': 0,
    'turn_signal_right_rear': 0,
    'washer_fluid_warning_is_on': False,
    'year': None,
  })
# ---
# name: test_usa_kia_vehicle_snapshot[us_kia_niro_ev_2020_cached.json]
  dict({
    'VIN': None,
    'accessory_on': None,
    'air_control_is_on': False,
    'air_temperature': '72',
    'back_left_door_is_locked': None,
    'back_left_door_is_open': 0,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': None,
    'back_right_door_is_open': 0,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': 0,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 87,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': 0,
    'dtc_descriptions': list([
    ]),
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': None,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': False,
    'ev_battery_is_plugged_in': 0,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 68,
    'ev_battery_precondition_enabled': None,
    'ev_battery_remain': None,
    'ev_battery_soh_percentage': None,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': None,
    'ev_charge_limits_dc': None,
    'ev_charge_port_door_is_open': None,
    'ev_charging_current': None,
    'ev_charging_power': 0.0,
    'ev_driving_range': 170,
    'ev_driving_range_unit': 'mi',
    'ev_estimated_current_charge_duration': 0,
    'ev_estimated_fast_charge_duration': 0,
    'ev_estimated_portable_charge_duration': 0,
    'ev_estimated_station_charge_duration': 0,
    'ev_first_departure_climate_defrost': None,
    'ev_first_departure_climate_enabled': None,
    'ev_first_departure_climate_temperature': None,
    'ev_first_departure_climate_temperature_unit': None,
    'ev_first_departure_days': None,
    'ev_first_departure_enabled': None,
    'ev_first_departure_time': None,
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': None,
    'ev_off_peak_start_time': None,
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': None,
    'ev_second_departure_climate_defrost': None,
    'ev_second_departure_climate_enabled': None,
    'ev_second_departure_climate_temperature': None,
    'ev_second_departure_climate_temperature_unit': None,
    'ev_second_departure_days': None,
    'ev_second_departure_enabled': None,
    'ev_second_departure_time': None,
    'ev_target_range_charge_AC': None,
    'ev_target_range_charge_AC_unit': None,
    'ev_target_range_charge_DC': None,
    'ev_target_range_charge_DC_unit': None,
    'ev_v2l_discharge_limit': None,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': None,
    'front_left_door_is_open': 0,
    'front_left_seat_status': None,
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': None,
    'front_right_door_is_open': 0,
    'front_right_seat_status': None,
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': None,
    'headlamp_right_low': None,
    'headlamp_status': None,
    'hood_is_open': 0,
    'id': None,
    'ign3': None,
    'is_locked': True,
    'key': None,
    'last_service_distance': 20000,
    'last_updated_at': '2024-06-15T14:30:00+00:00',
    'location': list([
      -122.4194,
      37.7749,
    ]),
    'location_last_updated_at': '2024-06-15T14:30:00+00:00',
    'location_latitude': 37.7749,
    'location_longitude': -122.4194,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': 30000,
    'odometer': 23456.0,
    'odometer_unit': 'mi',
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': None,
    'rear_right_seat_status': None,
    'registration_date': None,
    'remote_ignition': None,
    'side_mirror_heater_is_on': 0,
    'sleep_mode_check': None,
    'smart_key_battery_warning_is_on': False,
    'steering_wheel_heater_is_on': 0,
    'stop_lamp_left': None,
    'stop_lamp_right': None,
    'sunroof_is_open': 0,
    'timezone': 'UTC',
    'tire_pressure_all_warning_is_on': 0,
    'tire_pressure_front_left_warning_is_on': None,
    'tire_pressure_front_right_warning_is_on': None,
    'tire_pressure_rear_left_warning_is_on': None,
    'tire_pressure_rear_right_warning_is_on': None,
    'total_driving_range': 170,
    'total_driving_range_unit': 'mi',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': None,
    'trunk_is_open': 0,
    'turn_signal_left_front': None,
    'turn_signal_left_rear': None,
    'turn_signal_right_front': None,
    'turn_signal_right_rear': None,
    'washer_fluid_warning_is_on': False,
    'year': None,
  })
# ---
# name: test_usa_kia_vehicle_snapshot[us_kia_niro_ev_2020_force_refresh.json]
  dict({
    'VIN': None,
    'accessory_on': None,
    'air_control_is_on': False,
    'air_temperature': '72',
    'back_left_door_is_locked': None,
    'back_left_door_is_open': 0,
    'back_left_window_is_open': 0,
    'back_right_door_is_locked': None,
    'back_right_door_is_open': 0,
    'back_right_window_is_open': 0,
    'back_window_heater_is_on': 0,
    'brake_fluid_warning_is_on': False,
    'car_battery_percentage': 90,
    'ccu_ccs2_protocol_support': None,
    'daily_stats': list([
    ]),
    'day_trip_info': None,
    'defrost_is_on': False,
    'dtc_count': 0,
    'dtc_descriptions': list([
    ]),
    'enabled': True,
    'engine_is_running': False,
    'engine_type': None,
    'ev_battery_capacity': None,
    'ev_battery_chiller_rpm': None,
    'ev_battery_heating_state': None,
    'ev_battery_is_charging': True,
    'ev_battery_is_plugged_in': 1,
    'ev_battery_pack_voltage': None,
    'ev_battery_percentage': 72,
    'ev_battery_precondition_enabled': None,
    'ev_battery_remain': None,
    'ev_battery_soh_percentage': None,
    'ev_battery_temperature_max': None,
    'ev_battery_temperature_min': None,
    'ev_battery_water_temperature': None,
    'ev_battery_winter_mode': None,
    'ev_charge_limits_ac': 90,
    'ev_charge_limits_dc': 80,
    'ev_charge_port_door_is_open': None,
    'ev_charging_current': None,
    'ev_charging_power': 7.2,
    'ev_driving_range': 180,
    'ev_driving_range_unit': 'mi',
    'ev_estimated_current_charge_duration': 240,
    'ev_estimated_fast_charge_duration': 42,
    'ev_estimated_portable_charge_duration': 480,
    'ev_estimated_station_charge_duration': 120,
    'ev_first_departure_climate_defrost': None,
    'ev_first_departure_climate_enabled': None,
    'ev_first_departure_climate_temperature': None,
    'ev_first_departure_climate_temperature_unit': None,
    'ev_first_departure_days': None,
    'ev_first_departure_enabled': None,
    'ev_first_departure_time': None,
    'ev_off_peak_charge_only_enabled': None,
    'ev_off_peak_end_time': None,
    'ev_off_peak_start_time': None,
    'ev_power_consumption_air_conditioning': None,
    'ev_power_consumption_battery_cooling': None,
    'ev_power_consumption_battery_heater': None,
    'ev_schedule_charge_enabled': None,
    'ev_second_departure_climate_defrost': None,
    'ev_second_departure_climate_enabled': None,
    'ev_second_departure_climate_temperature': None,
    'ev_second_departure_climate_temperature_unit': None,
    'ev_second_departure_days': None,
    'ev_second_departure_enabled': None,
    'ev_second_departure_time': None,
    'ev_target_range_charge_AC': None,
    'ev_target_range_charge_AC_unit': None,
    'ev_target_range_charge_DC': None,
    'ev_target_range_charge_DC_unit': None,
    'ev_v2l_discharge_limit': None,
    'ev_v2l_status': None,
    'ev_v2x_status': None,
    'front_left_door_is_locked': None,
    'front_left_door_is_open': 0,
    'front_left_seat_status': None,
    'front_left_window_is_open': 0,
    'front_right_door_is_locked': None,
    'front_right_door_is_open': 0,
    'front_right_seat_status': None,
    'front_right_window_is_open': 0,
    'fuel_driving_range': None,
    'fuel_level': 0,
    'fuel_level_is_low': False,
    'generation': None,
    'geocode': list([
      None,
      None,
    ]),
    'headlamp_left_low': None,
    'headlamp_right_low': None,
    'headlamp_status': None,
    'hood_is_open': 0,
    'id': None,
    'ign3': None,
    'is_locked': True,
    'key': None,
    'last_service_distance': 20000,
    'last_updated_at': '2024-06-15T15:00:00+00:00',
    'location': list([
      -122.4194,
      37.7749,
    ]),
    'location_last_updated_at': '2024-06-15T15:00:00+00:00',
    'location_latitude': 37.7749,
    'location_longitude': -122.4194,
    'model': None,
    'month_trip_info': None,
    'name': None,
    'next_service_distance': 30000,
    'odometer': 23460.0,
    'odometer_unit': 'mi',
    'outside_temperature': None,
    'power_consumption_30d': None,
    'rear_left_seat_status': None,
    'rear_right_seat_status': None,
    'registration_date': None,
    'remote_ignition': None,
    'side_mirror_heater_is_on': 0,
    'sleep_mode_check': None,
    'smart_key_battery_warning_is_on': False,
    'steering_wheel_heater_is_on': 0,
    'stop_lamp_left': None,
    'stop_lamp_right': None,
    'sunroof_is_open': 0,
    'timezone': 'UTC',
    'tire_pressure_all_warning_is_on': 0,
    'tire_pressure_front_left_warning_is_on': None,
    'tire_pressure_front_right_warning_is_on': None,
    'tire_pressure_rear_left_warning_is_on': None,
    'tire_pressure_rear_right_warning_is_on': None,
    'total_driving_range': 180,
    'total_driving_range_unit': 'mi',
    'total_power_consumed': None,
    'total_power_regenerated': None,
    'transmission_condition': None,
    'trunk_is_open': 0,
    'turn_signal_left_front': None,
    'turn_signal_left_rear': None,
    'turn_signal_right_front': None,
    'turn_signal_right_rear': None,
    'washer_fluid_warning_is_on': False,
    'year': None,
  })
# ---
